2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-default-xsd-types)
	(soap-default-soapenc-types): add float basic type
	(soap-decode-array): bugfix decode the actual child nodes of the
	array (Bug #6)
	(soap-decode-basic-type): recognize float type as a number

2010-10-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-wsdl): add origin slot
	(soap-load-wsdl-from-url, soap-load-wsdl): populate origin slot

	* soap-inspect.el (soap-client): 0 new file

2010-10-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-wsdl-get): convert the name to a string if
	it is a symbol (fixes Bug #5)

2010-10-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2fq, soap-namespace-get, soap-wsdl-get):
	better error checking and reporting
	(soap-default-xsd-types, soap-default-soapenc-types): add the
	byte[] basic type


2010-10-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-type-p): new function
	(soap-resolve-references-for-sequence-type)
	(soap-resolve-references-for-array-type)
	(soap-resolve-references-for-message, soap-decode-array): use it
	when calling `soap-wsdl-get'
	* soap-client.el (soap-invoke): call `mm-destroy-part' on the HTTP
	response to avoid leaking temporary buffers.

2010-10-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2fq): new function
	(soap-wsdl-get): accept fully qualified names + doc update
	(soap-l2wsdl): removed
	(soap-resolve-references-for-operation): allow unnamed message
	parts for inputs outputs and faults.

2010-10-16  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-decode-any-type, soap-decode-array): decode
	arrays of anyType values.

2010-10-15  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-default-xsd-types)
	(soap-default-soapenc-types): add base64Binary basic type
	(soap-decode-any-type): new defun
	(soap-decode-basic-type): decode anyType nodes and base64Binary